Add authentication and unhappy path flow